--- a/sass/partials/_payment.scss
+++ b/sass/partials/_payment.scss
@@ -4,7 +4,7 @@
 
   a {
     width: 300px;
-    padding: 3% 24%;
+    padding: 3.5% 24%;
     text-decoration: none;
     background-color: hsl(245, 75%, 52%);
     border-radius: 9px;
@@ -12,5 +12,26 @@
     font-size: 0.8rem;
     font-weight: 900;
     cursor: pointer;
+    box-shadow: 0 5px 15px grey;
+
+    &:hover {
+      background: hsl(246, 39%, 43%);
+    }
+  }
+}
+
+.cancel-order {
+  text-align: center;
+  margin: 35px 0;
+  a {
+    text-decoration: none;
+    color: hsl(224, 23%, 55%);
+    font-size: 0.8rem;
+    font-weight: 900;
+    transition: all 0.8s;
+
+    &:hover {
+      color: hsl(223, 47%, 23%);
+    }
   }
 }
