--- a/sass/partials/_fees.scss
+++ b/sass/partials/_fees.scss
@@ -22,7 +22,9 @@
     flex-direction: column;
 
     .limit {
-      font-weight: 700;
+      font-weight: 900;
+      font-size: 0.9rem;
+      color: hsl(223, 47%, 23%);
     }
 
     .price {
