--- a/sass/style.css
+++ b/sass/style.css
@@ -129,6 +129,8 @@
 body {
   font-family: "Red Hat Display", sans-serif;
   background: #e0e8ff;
+  background-image: url(../images/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
 }
 
 .card {
