--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,8 @@
 body {
   font-family: "Red Hat Display", sans-serif;
   background: hsl(225, 100%, 94%);
+  background-image: url(../images/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
 }
 
 .card {
